2007-01-09  Thomas Wood  <thos@gnome.org>

	* Makefile.am: Fix for distcheck

2007-01-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: updated for 2.17.5.

2007-01-08  Jan Arne Petersen  <jpetersen@jpetersen.org>

	Fixes #173035

	* configure.in: updated sound capplet requirements.

2007-01-08  Denis Washington <dwashington@gmx.net>

	Fixes #393617

	* */*.desktop.in.in: use new control center shell categories for
	the capplets.

2007-01-08  Thomas Wood  <thos@gnome.org>

	Patch by: Alberto Ruiz <aruiz@synaptia.net>

	* configure.in:

	Add support for opening .gtp (application/x-gnome-theme-package) files.
	Fixes bug 393697 (Theme packages should have their own mime type.)

2007-01-06  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	Fixes #392276

	* configure.in: added support for disabling esound.

2007-01-03  Christian Persch  <chpe@svn.gnome.org>

	* configure.in:
	A po/LINGUAS:
	Apply GnomeGoal. Patch by Steve Frécinaux and Luca Cavalli, bug
	#337909.

2006-12-19  Sebastien Bacher <seb128@ubuntu.com>

	* NEWS:
	* configure.in: updated for 2.17.4

2006-12-07  William Jon McCann  <mccann@jhu.edu>

	* gnome-settings-daemon/Makefile.am:
	* gnome-settings-daemon/actions/Makefile.am:
	* gnome-settings-daemon/actions/acme.glade:
	* gnome-settings-daemon/actions/gnome-speakernotes-muted.png:
	* gnome-settings-daemon/actions/gnome-speakernotes.png:
	* gnome-settings-daemon/gnome-settings-multimedia-keys.c:
	(execute), (dialog_init), (unhookup_keysym), (update_kbd_cb),
	(init_kbd), (dialog_show), (do_eject_action), (do_sound_action),
	(gnome_settings_multimedia_keys_load):
	* gnome-settings-daemon/gsd-media-keys-window.c: (hide_timeout),
	(remove_hide_timeout), (add_hide_timeout), (update_window),
	(volume_controls_set_visible), (window_set_icon_name),
	(window_set_icon_file), (action_changed), (volume_level_changed),
	(volume_muted_changed), (gsd_media_keys_window_set_action),
	(gsd_media_keys_window_set_volume_muted),