@@ -7,7 +7,7 @@ Icon=user-info
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;GTK;Settings;PersonalSettings;
+Categories=GNOME;GTK;Settings;X-GNOME-PersonalSettings;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=control-center
