@@ -7,7 +7,7 @@ Icon=gnome-settings-accessibility-keyboard
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;GTK;Settings;PersonalSettings;Accessibility;
+Categories=GNOME;GTK;Settings;X-GNOME-PersonalSettings;Accessibility;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=control-center
