@@ -7,7 +7,7 @@ Icon=stock_proxy
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;GTK;Settings;NetworkSettings;
+Categories=GNOME;GTK;Settings;X-GNOME-NetworkSettings;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=control-center
