@@ -1,3 +1,14 @@
+2007-01-17  Denis Washington  <dwashington@gmx.net>
+
+	* capplets/accessibility/keyboard/accessibility-keyboard.desktop.in.in:
+	* capplets/accessibility/at-properties/at-properties.desktop.in.in:
+	* capplets/network/gnome-network-preferences.desktop.in.in:
+	* capplets/default-applications/default-applications.desktop.in.in:
+	* capplets/about-me/gnome-about-me.desktop.in.in:
+
+	Replace the non-standard-compilant categories PersonalSettings,
+	NetworkSettings and SystemSettings with X-GNOME-*.
+
 2007-01-09  Thomas Wood  <thos@gnome.org>
 
 	* Makefile.am: Fix for distcheck
